# LavaLamp

./: CMakeLists.txt  Constants.hpp  CudaHelper.cuh  README.md  SPH.h  cuda_solver.cu  cuda_solver.cuh  graphmodule.cpp  graphmodule.hpp  main.cpp  mainloop.cpp  mainloop.hpp  sph_solver.cpp  sph_solver.hpp  structs.h
support/: CudaHelper.cuh
